--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "test": "vitest"
   },
   "dependencies": {
     "@emotion/react": "latest",
@@ -14,6 +15,7 @@
     "@mui/material": "latest",
     "axios": "^1.6.2",
     "formik": "^2.4.5",
+    "jsdom": "^22.1.0",
     "react": "latest",
     "react-dom": "latest",
     "react-router-dom": "^6.19.0",
@@ -22,7 +24,9 @@
     "zustand": "^4.4.6"
   },
   "devDependencies": {
+    "@testing-library/react": "^14.1.2",
     "@vitejs/plugin-react": "latest",
-    "vite": "latest"
+    "vite": "latest",
+    "vitest": "^0.34.6"
   }
 }
